# drone_controller

./: CMakeLists.txt  README.md  package.xml
include/drone_controller/: aec_controller.h  asm_controller.h  common_operations.h  ec_controller.h  ecbf_controller.h  multi_ecbf_controller.h  pid_controller.h  rsb_controller.h
launch/: artpark_launch.launch  controller_tuning.launch  mav_with_box.launch  mav_with_turtlebot.launch  multi_mav_turtlebots.launch  test_with_rotors.launch
models/: gripper.stl  model.config  model.sdf  spine.stl
resources/: aec_pelican.yaml  asm_pelican.yaml  ec_pelican.yaml  ec_pelican_position.yaml  ecbf_pelican.yaml  multi_ecbf_pelican.yaml  params.yaml  pid_pelican.yaml  waypoints.txt
src/libs/: aec_controller.cpp  asm_controller.cpp  ec_controller.cpp  ecbf_controller.cpp  ecbf_controller_original.cpp  multi_ecbf_controller.cpp  multi_ecbf_controller_not_working.cpp  multi_ecbf_controller_single.cpp  pid_controller.cpp  pid_controller_bs_cbf_good.cpp  rsb_controller.cpp
src/nodes/: aec_node.cpp  aec_node.h  angleCorrection.cpp  asm_node.cpp  asm_node.h  ec_node.cpp  ec_node.h  ecbf_node.cpp  ecbf_node.h  multi_ecbf_node.cpp  multi_ecbf_node.h  pid_node.cpp  pid_node.h  rsb_node.cpp  rsb_node.h
src/scripts/: ellipse_plot.py  multi_turtle_bot_odom_publisher.py  turtle_bot_odom_publisher.py
worlds/: basic.world  empty.world
